@@ -1,3 +1,9 @@
+debian-installer-utils (0.35) UNRELEASED ; urgency=low
+
+  * Move di-utils-terminfo build bits into binary-indep. 
+
+ -- Alastair McKinstry <mckinstry@debian.org>  Sat,  1 Nov 2003 09:44:06 +0000
+
 debian-installer-utils (0.34) unstable; urgency=low
 
   * Alastair McKinstry
